--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
                                 <h3 class="title is-3">Filtros</h3>
                             </div>
                             <div class="column has-text-right">
-                                <a href="#" id="">Ocultar filtros</a>
+                                <a href="#" id="filter-label">Ocultar filtros</a>
                             </div>
                         </div>
-                        <div id="flitros">
+                        <div id="filters">
                             <div class="field">
                                 <label class="label" for="type-filter">Tipo</label>
                                 <div class="control">
