cambios para la seccion de categorias con boton de eliminar y editar

--- a/index.html
+++ b/index.html
@@ -158,13 +158,8 @@
                                     </div>
                                 </div>
                             </div>
-
-
                         </div>
-
                     </div>
-
-
                 </div>
                 <div class="column is-7-widescreen is--desktop">
                     <div class="box container-operation">
@@ -245,92 +240,7 @@
                                 <button class="button is-success" id="add-category-button">Agregar</button>
                             </div>
                         </div>
-                        <div class="mt-6" id="categories">
-                            <div class="mb-3">
-                                <div class="columns is-vcentered is-mobile">
-                                    <div class="column">
-                                        <span class="tag is-primary is-light">Comida</span>
-                                    </div>
-                                    <div class="column is-narrow has-text">
-                                        <p>
-                                            <a href="#" class="mr-4 is-size-7 edit-link">Editar</a>
-                                            <a href="#" class="is-size-7 delete-link">Eliminar</a>
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="mb-3">
-                                <div class="columns is-vcentered is-mobile">
-                                    <div class="column">
-                                        <span class="tag is-primary is-light">Servicios</span>
-                                    </div>
-                                    <div class="column is-narrow has-text">
-                                        <p>
-                                            <a href="#" class="mr-4 is-size-7 edit-link">Editar</a>
-                                            <a href="#" class="is-size-7 delete-link">Eliminar</a>
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="mb-3">
-                                <div class="columns is-vcentered is-mobile">
-                                    <div class="column">
-                                        <span class="tag is-primary is-light">Salidas</span>
-                                    </div>
-                                    <div class="column is-narrow has-text">
-                                        <p>
-                                            <a href="#" class="mr-4 is-size-7 edit-link">Editar</a>
-                                            <a href="#" class="is-size-7 delete-link">Eliminar</a>
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="mb-3">
-                                <div class="columns is-vcentered is-mobile">
-                                    <div class="column">
-                                        <span class="tag is-primary is-light">Educación</span>
-                                    </div>
-                                    <div class="column is-narrow has-text">
-                                        <p>
-                                            <a href="#" class="mr-4 is-size-7 edit-link">Editar</a>
-                                            <a href="#" class="is-size-7 delete-link">Eliminar</a>
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="mb-3">
-                                <div class="columns is-vcentered is-mobile">
-                                    <div class="column">
-                                        <span class="tag is-primary is-light">Transporte</span>
-                                    </div>
-                                    <div class="column is-narrow has-text">
-                                        <p>
-                                            <a href="#" class="mr-4 is-size-7 edit-link">Editar</a>
-                                            <a href="#" class="is-size-7 delete-link">Eliminar</a>
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="mb-3">
-                                <div class="columns is-vcentered is-mobile">
-                                    <div class="column">
-                                        <span class="tag is-primary is-light">Trabajo</span>
-                                    </div>
-                                    <div class="column is-narrow has-text">
-                                        <p>
-                                            <a href="#" class="mr-4 is-size-7 edit-link">Editar</a>
-                                            <a href="#" class="is-size-7 delete-link">Eliminar</a>
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-
-
+                        <div class="mt-6" id="list-categories">
                         </div>
                     </div>
                 </div>
@@ -339,6 +249,8 @@
     </section>
     <!-- FIN SECCION CATEGORIAS -->
 
+    <!-- DIV EDITAR CATEGORIAS -->
+    <div id="edit-category-section"></div>
 
     <!-- COMIENZO SECCION REPORTES -->
     <section class="section mt-5 vista is-hidden" id="section-reports">
