arreglos en la funcion de operaciones

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                             </div>
                         </div>
 
-                        <div id="aggregate-operations" class="is-hidden">
+                        <div id="add-operations" class="is-hidden">
                             <div class="columns has-text-weight-semibold is-hidden-mobile">
                                 <div class="column is-3">Descripción</div>
                                 <div class="column is-3">Categoría</div>
@@ -272,10 +272,9 @@
                                 <label class="label" for="description-input">Descripción</label>
                                 <div class="control">
                                     <div class="is--fullwidht">
-                                        <input class="input input-element-form" type="text" name id="description-input">
+                                        <input class="input input-element-form" type="text" id="description-input">
                                     </div>
                                 </div>
-
                             </div>
 
                             <div class="field">
@@ -283,7 +282,7 @@
                                 <div class="control">
                                     <div class="control">
                                         <div class="is-fullwidth">
-                                            <input class="input input-element-form" type="number" name id="monto-input"
+                                            <input class="input input-element-form" type="number" id="monto-input"
                                                 value="0">
                                         </div>
                                     </div>
