--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                                 <p class="is-size-5 my-5">Ganancias</p>
                             </div>
                             <div class="column is-8 has-text-right">
-                                <p class="has-text-right has-text-success">$90000</p>
+                                <p class="has-text-right has-text-success">0</p>
                             </div>
 
                         </div>
@@ -78,7 +78,7 @@
                                 <p class="is-size-5 my-5">Gastos</p>
                             </div>
                             <div class="column is-8 has-text-right">
-                                <p class="has-text-right has-text-danger">$1040</p>
+                                <p class="has-text-right has-text-danger">0</p>
                             </div>
 
                         </div>
@@ -87,7 +87,7 @@
                                 <p class="is-size-4 my-5">Total</p>
                             </div>
                             <div class="column is-8 has-text-right">
-                                <p class="has-text-right has-text-weight-bold">$89060</p>
+                                <p class="has-text-right has-text-weight-bold">0</p>
                             </div>
 
                         </div>
