--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
                             </div>
 
                             <div class="field">
+                                <!-- el for debe ser igual al id del elemento, en este caso, "filter-category" -->
                                 <label class="label" for="caterogy-filter">Categoría</label>
                                 <div class="control">
                                     <div class="select is-fullwidth">
@@ -135,6 +136,7 @@
 
 
                             <div class="field">
+                                <!-- el for debe ser igual al id del elemento -->
                                 <label class="label" for="caterogy-filter">Desde</label>
                                 <div class="control">
                                     <div class="is-fullwidth">
@@ -145,6 +147,7 @@
 
 
                             <div class="field">
+                                <!-- el for debe ser igual al id del elemento -->
                                 <label class="label" for="caterogy-filter">Ordenar por</label>
                                 <div class="control">
                                     <div class="select is-fullwidth">
@@ -289,6 +292,7 @@
                                 </div>
                             </div>
                             <div class="field">
+                                <!-- el for debe ser igual al id del elemento -->
                                 <label class="label" for="select-type">Tipo</label>
 
                                 <div class="control">
